--- a/public/css/app.css
+++ b/public/css/app.css
@@ -63,9 +63,10 @@ ul.breadcrumb span.divider {display: inline-block; margin: 3px;}
 /* Forums */
 #forums .mainTable, #forums #forum-message-list {margin-top: 35px; width:100%; }
 #forums #forum-message-list {padding: 0; list-style-type: none;}
-#forums .forum-message {min-height: 180px}
-#forums .forum-message .user-infos { float:left; width: 200px;}
-#forums .forum-message .forum-text-zone { margin-left:200px;}
+#forums .forum-message {min-height: 200px}
+#forums .forum-message .user-infos { float:left; width: 250px;}
+#forums .forum-message .user-infos img { height: 100px; width: 100px; float:left;}
+#forums .forum-message .forum-text-zone { margin-left:250px;}
 
 /* Docs */
 .sidebar {width: 25%;float: left;}
