--- a/public/css/app.css
+++ b/public/css/app.css
@@ -63,10 +63,15 @@ ul.breadcrumb span.divider {display: inline-block; margin: 3px;}
 /* Forums */
 #forums .mainTable, #forums #forum-message-list {margin-top: 35px; width:100%; }
 #forums #forum-message-list {padding: 0; list-style-type: none;}
-#forums .forum-message {min-height: 200px}
+#forums .forum-message {padding: 15px; min-height: 200px; position: relative; margin-bottom: 10px; border-radius: 4px}
+#forums .forum-message.even {background-color: #eee;}
+#forums .forum-message.odd {background-color: #ddd;}
+#forums .forum-message .forum-text {margin-top: 5px;}
 #forums .forum-message .user-infos { float:left; width: 270px; padding-top: 10px;}
 #forums .forum-message .user-infos img { height: 100px; width: 100px; float:left; margin: 0px 10px 10px 10px;}
 #forums .forum-message .forum-text-zone { margin-left:270px;}
+#forums .forum-message .forum-text-tools { position: absolute; bottom: 15px; right: 15px;}
+#forums .btn-new, #forums .btn-reply {display: inline-block; background-color: #f0523f; color:white; padding:6px 15px; border-top: 4px}
 
 /* Docs */
 .sidebar {width: 25%;float: left;}
