--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,7 +10,20 @@ h1 {font-weight: normal;}
 h2 {font-weight: normal;color: #f0523f;}
 a {color: #f0523f; text-decoration: none}
 a:hover {text-decoration: underline;}
-
+pre {
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 20px;
+    word-break: break-all;
+    word-wrap: break-word;
+    white-space: pre;
+    white-space: pre-wrap;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,0.15);
+    border-radius: 4px;
+}
 
 .container {width: 1060px; margin: 0 auto}
 
