modification et creation de pages du wiki

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,20 +43,20 @@ div.top_error {background-color: red; color: white;}
 div.top_success {background-color: green; color: white;}
 
 /* header */
-header {background: #4c4c4c}
-header nav {width: 1060px; margin:0 auto;font-family: 'Ubuntu', sans-serif;}
-header h1 {height: 69px; padding: 0;margin: 0;display: inline-block;font-weight: normal;line-height: 69px; width:320px; float:left;}
-header h1 img {float:left;margin: .5em;height: 45px;}
-header a {color : #A8A8A8;text-decoration: none;padding: 0 .6em;}
-header a:hover, header li.active > a {color: #F4F4F4;text-decoration: none}
-header ul.menu {display: inline-block;font-size: 1.2em;text-align: right; width: 635px; margin-top: 30px;}
-header ul li {display: inline-block;position: relative; float:left;}
-header ul li a {padding: 1.5em 0 1.5em 2em;}
-header ul ul {display: none;position: absolute;top: 1em;left: 1.3em;background: #4c4c4c;line-height: normal;padding: 0;border:1px solid #CCC;border-top:none;box-shadow: #474747 1px 1px 1px;}
-header ul ul:before{content: ' ';border-bottom: 10px solid #777;width: 0;height: 0;border-left: 10px solid transparent;border-right: 10px solid transparent;position: absolute;left: 9px;top: -10px;}
-header ul ul li {display: block;text-align: left;}
-header ul ul a {padding: 0.5em 6em 0.5em 1em;display: block;font-size: .9em;}
-header ul li.account {display:block; float:right}
+body > header {background: #4c4c4c}
+body > header nav {width: 1060px; margin:0 auto;font-family: 'Ubuntu', sans-serif;}
+body > header h1 {height: 68px; padding: 0;margin: 0;display: inline-block;font-weight: normal;line-height: 69px; width:320px; float:left;}
+body > header h1 img {float:left;margin: .5em;height: 45px;}
+body > header a {color : #A8A8A8;text-decoration: none;padding: 0 .6em;}
+body > header a:hover, body > header li.active > a {color: #F4F4F4;text-decoration: none}
+body > header ul.menu {display: inline-block;font-size: 1.2em;text-align: right; width: 635px; margin-top: 30px;}
+body > header ul li {display: inline-block;position: relative; float:left;}
+/* body > header ul li a {padding: 1.5em 0 1.5em 2em;} */
+body > header ul ul {display: none;position: absolute;top: 1em;left: 1.3em;background: #4c4c4c;line-height: normal;padding: 0;border:1px solid #CCC;border-top:none;box-shadow: #474747 1px 1px 1px;}
+body > header ul ul:before{content: ' ';border-bottom: 10px solid #777;width: 0;height: 0;border-left: 10px solid transparent;border-right: 10px solid transparent;position: absolute;left: 9px;top: -10px;}
+body > header ul ul li {display: block;text-align: left;}
+body > header ul ul a {padding: 0.5em 6em 0.5em 1em;display: block;font-size: .9em;}
+body > header ul li.account {display:block; float:right}
 
 /* Orange sub-nav */
 .orangebox {background: #f0523f;}
