--- a/public/css/app.css
+++ b/public/css/app.css
@@ -89,7 +89,7 @@ ul.breadcrumb span.divider {display: inline-block; margin: 3px;}
 #forums .forum-message {padding: .5em; min-height: 200px;position: relative;margin-bottom: 1em; border-radius:.5em;border:1px solid #ccc;}
 #forums .forum-message.even {background-color: #fff;}
 #forums .forum-message.odd {background-color: #FCFCFC;}
-#forums .forum-message .forum-text {margin-top: 5px; margin-bottom: 30px;}
+#forums .forum-message .forum-text {margin-top: 5px; margin-bottom: 30px; padding-right: 10px;}
 #forums .forum-message .user-infos { float:left; width: 270px; padding-top: 10px;}
 #forums .forum-message .user-infos img { height: 100px; width: 100px; float:left; margin: 0px 10px 10px 10px;}
 #forums .forum-message .forum-text-zone { margin-left:270px;}
@@ -106,6 +106,11 @@ ul.breadcrumb span.divider {display: inline-block; margin: 3px;}
 #forums .icon-circle, #forums .icon-circle-blank {color: #f0523f;}
 #forums .right-btn-group { float: right; }
 #forums .clear-sep {clear:both; height: 1px;}
+#forums .forum-message .forum-text ul > br, #forums .forum-message .forum-text ol > br {display: none;}
+#forums cite { display: block; font-weight: bold; font-style: italic; }
+#forums blockquote { border-left: 3px solid #ccc; padding: 10px 0px 10px 15px; margin: 1em 0px; box-shadow: 3px 3px 10px #888;}
+#forums blockquote p { margin: 0 0 10px 0 }
+
 /* Docs */
 .sidebar {width: 25%;float: left;}
 .sidebar ul {padding: 0;list-style: none;}
