--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,7 @@
 /*
  Color scheme
  Orange : #f0523f
- Grey : #4c4c4c
+ Grey : #443d3c
 */
 html, body {padding: 0;margin: 0; font-size: 14px; font-family: 'Open Sans', sans-serif;color:#808080; padding-bottom: 25px;min-height: 100%}
 
@@ -33,7 +33,7 @@ div.top_success {background-color: green; color: white;}
 
 /* header */
 body {padding-top:50px;}
-body > header {float: left;background: #5B4C4A;background: rgba(91, 76, 74, 0.9);position: fixed;top: 0;left: 0;right: 0;z-index: 1;}
+body > header {float: left;background: #5B4C4A;background: rgba(49, 42, 41, 0.9); position: fixed;top: 0;left: 0;right: 0;z-index: 1;}
 body > header nav {width: 1060px; margin:0 auto;font-family: 'Ubuntu', sans-serif;}
 body > header h1 {margin: 0;line-height: 2.3em;float: left;font-size: 1.4em;}
 body > header h1 a {padding: 0 0 0 1em;}
@@ -44,7 +44,7 @@ body > header a i {margin-right: .5em;}
 body > header ul.menu {float: right;font-size: 1.1em;text-align: right;}
 body > header ul li {position: relative; float:left;}
 body > header ul li.toggle {display: none}
-body > header ul ul {display: none;position: absolute;top: 1em;left: 1.3em;background: #4c4c4c;line-height: normal;padding: 0;border:1px solid #CCC;border-top:none;box-shadow: #474747 1px 1px 1px;}
+body > header ul ul {display: none;position: absolute;top: 1em;left: 1.3em;background: #443d3c;line-height: normal;padding: 0;border:1px solid #CCC;border-top:none;box-shadow: #474747 1px 1px 1px;}
 body > header ul ul:before{content: ' ';border-bottom: 10px solid #777;width: 0;height: 0;border-left: 10px solid transparent;border-right: 10px solid transparent;position: absolute;left: 9px;top: -10px;}
 body > header ul ul li {display: block;text-align: left;}
 body > header ul ul a {padding: 0.5em 6em 0.5em 1em;display: block;font-size: .9em;}
