--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,7 @@ p {line-height: 1.6;}
 a {color: #f0523f; text-decoration: none}
 a:hover {text-decoration: underline;}
 pre { padding: 9.5px; margin: 0 0 10px; font-size: 13px; line-height: 20px;word-break: break-all; word-wrap: break-word; white-space: pre; white-space: pre-wrap; background-color: #f5f5f5; border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.15); border-radius: 4px;}
+blockquote {background: #FFE4CB;color: #926224;margin: 0;padding: .5em 1em;border-radius: .4em;}
 
 .container {width: 1060px; margin: 0 auto}
 
